kubernetes/ingress/zooniverse.org.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zooniverse-org-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    secretName: zooniverse-org-tls
  routes:

    # Manually set priority for catch-alls the specific apps below always win
    - match: Host(`zooniverse.org`) || HostRegexp(`{sub:[a-z0-9-]+}.zooniverse.org`) || HostRegexp(`{sub:[a-z0-9-]+}.staging.zooniverse.org`) || HostRegexp(`{sub:[a-z0-9-]+}.preview.zooniverse.org`) || HostRegexp(`{sub:[a-z0-9-]+}.pfe-preview.zooniverse.org`) || HostRegexp(`{sub:[a-z0-9-]+}.lab-preview.zooniverse.org`) || HostRegexp(`{sub:[a-z0-9-]+}.azure.zooniverse.org`)
      kind: Rule
      priority: 10
      services:
        - name: http-frontend
          port: 80

    # Default, length-based priorities, all greater than 10
    - match: Host(`aggregation-staging.zooniverse.org`)
      kind: Rule
      services: [{name: aggregation-staging-app, port: 80}]
    - match: Host(`aggregation-caesar.zooniverse.org`)
      kind: Rule
      services: [{name: aggregation-production-app, port: 80}]
    - match: Host(`caesar-staging.zooniverse.org`)
      kind: Rule
      services: [{name: caesar-staging-app, port: 80}]
    - match: Host(`caesar.zooniverse.org`)
      kind: Rule
      services: [{name: caesar-production-app, port: 80}]
    - match: Host(`classroom-maps-api.zooniverse.org`)
      kind: Rule
      services: [{name: classroom-maps-api-production-app, port: 80}]
    - match: Host(`designator-staging.zooniverse.org`)
      kind: Rule
      services: [{name: designator-staging-app, port: 80}]
    - match: Host(`designator.zooniverse.org`)
      kind: Rule
      services: [{name: designator-production-app, port: 80}]
    - match: Host(`education-api-staging.zooniverse.org`)
      kind: Rule
      services: [{name: education-api-staging-app, port: 80}]
    - match: Host(`education-api.zooniverse.org`)
      kind: Rule
      services: [{name: education-api-production-app, port: 80}]
    - match: Host(`eras.zooniverse.org`)
      kind: Rule
      services: [{name: eras-production-app, port: 80}]
    - match: Host(`eras-staging.zooniverse.org`)
      kind: Rule
      services: [{name: eras-staging-app, port: 80}]
    - match: Host(`fe-project-branch.preview.zooniverse.org`)
      kind: Rule
      services: [{name: zooniverse-org-project-branch, port: 80}]
    - match: Host(`fe-project.preview.zooniverse.org`)
      kind: Rule
      services: [{name: zooniverse-org-project-staging, port: 80}]
    - match: Host(`fe-project.zooniverse.org`)
      kind: Rule
      services: [{name: zooniverse-org-project-production, port: 80}]
    - match: Host(`fe-root.preview.zooniverse.org`)
      kind: Rule
      services: [{name: zooniverse-org-root-staging, port: 80}]
    - match: Host(`fe-root.zooniverse.org`)
      kind: Rule
      services: [{name: zooniverse-org-root-production, port: 80}]
    - match: Host(`fe-static.zooniverse.org`)
      kind: Rule
      services: [{name: zooniverse-org-project-static, port: 80}]
    - match: Host(`imgproc.azure.zooniverse.org`)
      kind: Rule
      services: [{name: image-proc, port: 80}]
    - match: Host(`interventions-gateway-staging.zooniverse.org`)
      kind: Rule
      services: [{name: interventions-gateway-staging, port: 80}]
    - match: Host(`interventions-gateway.zooniverse.org`)
      kind: Rule
      services: [{name: interventions-gateway-production, port: 80}]
    - match: Host(`links.zooniverse.org`)
      kind: Rule
      services: [{name: http-frontend, port: 80}]
    - match: Host(`listmonk.zooniverse.org`)
      kind: Rule
      services: [{name: listmonk, port: 80}]
    - match: Host(`notifications-staging.zooniverse.org`)
      kind: Rule
      services: [{name: sugar-staging-app, port: 80}]
    - match: Host(`notifications.zooniverse.org`)
      kind: Rule
      services: [{name: sugar-production-app, port: 80}]
    - match: Host(`passbolt.zooniverse.org`)
      kind: Rule
      services: [{name: passbolt, port: 80}]
    - match: Host(`ses-bounces.zooniverse.org`)
      kind: Rule
      services: [{name: email-verify, port: 80}]
    - match: Host(`seven-ten-staging.zooniverse.org`)
      kind: Rule
      services: [{name: http-frontend-staging, port: 80}]
    - match: Host(`stats.zooniverse.org`)
      kind: Rule
      services: [{name: zoo-event-stats-production-api, port: 80}]
    - match: Host(`subject-assistant-proxy.zooniverse.org`)
      kind: Rule
      services: [{name: subject-assistant-proxy, port: 80}]
    - match: Host(`subject-set-search-api.zooniverse.org`)
      kind: Rule
      services: [{name: subject-set-search-api-production-app, port: 80}]
    - match: Host(`theia-staging.zooniverse.org`)
      kind: Rule
      services: [{name: theia-staging-app, port: 80}]
    - match: Host(`theia.zooniverse.org`)
      kind: Rule
      services: [{name: theia-production-app, port: 80}]
    - match: Host(`thumbnails.azure.zooniverse.org`)
      kind: Rule
      services: [{name: thumbnailer, port: 80}]
    - match: Host(`thumbnails-staging.zooniverse.org`)
      kind: Rule
      services: [{name: thumbnailer-staging, port: 80}]
    - match: Host(`tove-staging.zooniverse.org`)
      kind: Rule
      services: [{name: tove-staging-app, port: 80}]
    - match: Host(`tove.zooniverse.org`)
      kind: Rule
      services: [{name: tove-production-app, port: 80}]
    - match: Host(`zoomapper.azure.zooniverse.org`)
      kind: Rule
      services: [{name: zoomapper-production-app, port: 80}]
